2021-03-15  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/shell/magic/Scala.java:
	Initial writing (but need to address
	https://github.com/scala/bug/issues/11754).

	* src/main/java/ganymede/kernel/JupyterRestClient.java:
	Initial writing.

2021-03-14  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/renderer/SparkSessionRenderer.java:
	Initial writing.

	* src/main/java/ganymede/kernel/Kernel.java,
	src/main/java/ganymede/server/Server.java:
	Define and implement getKernelInfo() method.

2021-03-12  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/Message.java:
	Add topic to Pub message envelopes (trivially msg_type).

2021-03-10  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/renderer/AbstractThymeleafHTMLRenderer.java:
	Initial writing; refactored SparkDatasetRenderer and
	TablesawPlotlyFigureRenderer.

	* src/main/java/ganymede/server/renderer/SparkDatasetRenderer.java:
	Initial writing.

2021-03-07  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/shell/magic/HTML.java: Initial writing.

	* src/main/java/ganymede/dependency/Resolver.java:
	Quietly enforce only one SLF4J binding is added to the classpath.

	* Modified Analyzer.getShadedArtifactSet(File) to search for
	META-INF/shaded-artifacts before applying heuristics.  Generate
	META-INF/shaded-artifacts for ganymede-kernel.jar.

2021-03-05  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Resolver.java:
	Refactored WorkspaceReader implementation to an inner class.

	* src/main/java/ganymede/notebook/Notebook.java:
	Created Notebook @SpringBootApplication to initialize JShell.

2021-03-04  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/dependency/Analyzer.java:
	Fixed bug in getArtifactFrom(Attributes,File).

2021-03-01  Allen D. Ball  <ball@hcf.dev>

	* src/main/java/ganymede/server/Message.java:
	Added execute_result(execution_count,String) method.

2021-02-28  Allen D. Ball  <ball@hcf.dev>
