@@ -1,7 +1,10 @@
+2021-03-16  Allen D. Ball  <ball@hcf.dev>
+
+	* Added groovy and kotlin magics.
+
 2021-03-15  Allen D. Ball  <ball@hcf.dev>
 
-	* src/main/java/ganymede/shell/magic/Scala.java:
-	Initial writing (but need to address
+	* Added scala magic (but need to address
 	https://github.com/scala/bug/issues/11754).
 
 	* src/main/java/ganymede/kernel/JupyterRestClient.java:
